# pocket-scope

./: .gitignore  .pre-commit-config.yaml  .rsync-exclude  README.md  max_ranges.json  pyproject.toml
.github/: copilot_instructions.md
docs/: adsb-data-flow.md  max_range_viz.ipynb  systemd-setup.md
docs/pr/: pi-display-vs-dev-pr-notes.md
docs/releases/: pi-display-release-notes.md
pocketscope/: app.py
pocketscope/core/events/: __init__.py
pocketscope/platform/io/: __init__.py
pocketscope/tests/golden_frames/: __init__.py
pocketscope/tools/: record_replay.py
pocketscope/ui/: controllers.py
sample_data/: README.txt  aircraft_20250829_120000Z.json  aircraft_20250829_120001Z.json  aircraft_20250829_120002Z.json  aircraft_20250829_120003Z.json  aircraft_20250829_120004Z.json  aircraft_20250829_120005Z.json  aircraft_20250829_120006Z.json  aircraft_20250829_120007Z.json  aircraft_20250829_120008Z.json  aircraft_20250829_120009Z.json  aircraft_20250829_120010Z.json  aircraft_20250829_120011Z.json  aircraft_20250829_120012Z.json  aircraft_20250829_120013Z.json  aircraft_20250829_120014Z.json  aircraft_20250829_120015Z.json  aircraft_20250829_120016Z.json  aircraft_20250829_120017Z.json  aircraft_20250829_120018Z.json  aircraft_20250829_120019Z.json  aircraft_20250829_120020Z.json  aircraft_20250829_120021Z.json  aircraft_20250829_120022Z.json  aircraft_20250829_120023Z.json  aircraft_20250829_120024Z.json  aircraft_20250829_120025Z.json  aircraft_20250829_120026Z.json  aircraft_20250829_120027Z.json  aircraft_20250829_120028Z.json  aircraft_20250829_120029Z.json  aircraft_20250829_120030Z.json  aircraft_20250829_120031Z.json  aircraft_20250829_120032Z.json  aircraft_20250829_120033Z.json  aircraft_20250829_120034Z.json  aircraft_20250829_120035Z.json  aircraft_20250829_120036Z.json  aircraft_20250829_120037Z.json  aircraft_20250829_120038Z.json  (+52 more)
src/pocketscope/: __init__.py  __main__.py  cli.py  config.py
src/pocketscope/app/: __init__.py  live_view.py
src/pocketscope/assets/: airports.json  artcc.json
src/pocketscope/config/: default.toml
src/pocketscope/core/: events.py  geo.py  models.py  time.py  tracks.py
src/pocketscope/data/: __init__.py  airports.py  runways_store.py  sectors.py
src/pocketscope/examples/: __init__.py  live_view.py
src/pocketscope/ingest/adsb/: __init__.py  file_source.py  json_source.py  playback_source.py
src/pocketscope/ingest/gps/: __init__.py
src/pocketscope/ingest/imu/: __init__.py
src/pocketscope/platform/display/: __init__.py  ili9341_backend.py  pygame_backend.py  spi_lock.py  web_backend.py
src/pocketscope/platform/input/: __init__.py  pygame_input.py  xpt2046_touch.py
src/pocketscope/render/: airport_icon.py  airports_layer.py  canvas.py  fonts.py  labels.py  sectors_layer.py  view_ppi.py
src/pocketscope/render/layers/: __init__.py
src/pocketscope/settings/: schema.py  store.py  values.py  values.yml
src/pocketscope/tests/: test_airport_icon.py  test_runways_store.py
src/pocketscope/tests/core/: models.py  test_events.py  test_geo_property.py  test_geo_unit.py  test_tracks.py
src/pocketscope/tests/data/: adsb_trace.jsonl  adsb_trace_ppi.jsonl  aircraft_sample.json
src/pocketscope/tests/ingest/: __init__.py  test_adsb_playback.py
src/pocketscope/tests/render/: test_golden_ppi.py
src/pocketscope/tools/: config_watcher.py  max_range_tracker.py  record_replay.py  test_dump1090_fetch.py
src/pocketscope/ui/: __init__.py  controllers.py  settings_screen.py  softkeys.py  status_overlay.py
tests/: conftest.py  test_cli.py
tests/core/: test_geo_property.py  test_models.py  test_time.py  test_tracks.py
tests/data/: render_golden_sectors.json  sectors_sample.json
tests/fixtures/: airports_ma.json  render_golden_aircraft.jsonl  sectors_sample.json  trace_small.jsonl
tests/ingest/: test_dump1090_json_source.py
tests/platform/: test_ili9341_backend.py  test_ili9341_chunking.py  test_integration_smoke.py  test_xpt2046_touch.py
tests/render/: test_airports_collision.py  test_airports_golden.py  test_airports_unit.py  test_golden_ppi.py  test_labels_format.py  test_labels_layout.py  test_render_golden.py  test_sectors_golden.py  test_sectors_unit.py
tests/settings/: test_store.py
tests/ui/: test_altitude_filter.py  test_altitude_filter_custom_bounds.py  test_north_up_lock.py  test_settings_mouse_clicks.py  test_settings_screen.py  test_settings_softkeys_back_save.py  test_softkeys_settings.py  test_track_length_custom.py  test_track_length_trimming.py
(+3 files in other folders)
