[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketscope"
# Version is dynamically sourced from pocketscope.__version__ (see [tool.setuptools.dynamic])
dynamic = ["version"]
description = "PocketScope — a handheld Pi-powered ATC-style scope for decoding and displaying ADS-B traffic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PocketScope Team" }
]

dependencies = [
  "pydantic>=2.0",
  "numpy>=1.24",
  "msgpack>=1.0",
  "aiohttp>=3.9",
  "PyYAML>=6.0",
  # Use pygame-ce on Python 3.13+; fall back to pygame on older versions
  "pygame-ce>=2.5.5; python_version >= '3.13'",
  "pygame>=2.3.0; python_version < '3.13'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "black>=23.0",
  "ruff>=0.1.0",
  "isort>=5.12.0",
  "mypy>=1.5",
  "pre-commit>=3.0",
  "hypothesis>=6.0"
]
pi = [
  # Raspberry Pi hardware interfaces (optional; only install on Pi)
  "spidev>=3.6",
  "RPi.GPIO>=0.7",
  "Pillow>=10.0"
]

[project.scripts]
pocketscope = "pocketscope.__main__:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true

# Per-module/test overrides for external libs and property-based tests
overrides = [
  { module = "hypothesis.*", ignore_missing_imports = true },
  { module = "msgpack", ignore_missing_imports = true },
  { module = "pygame.*", ignore_missing_imports = true },
  { module = "spidev", ignore_missing_imports = true },
  { module = "RPi.*", ignore_missing_imports = true },
  { module = "PIL.*", ignore_missing_imports = true },
  { module = "aiohttp.*", ignore_missing_imports = true },
  { module = "pocketscope.tests.*", disallow_untyped_decorators = false },
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
  "src/pocketscope/tests",
  "tests",
]

[tool.setuptools.dynamic]
version = { attr = "pocketscope.__version__" }
